# htn-ml-productivity-workshop

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.in  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
src/: data.py  main.py  models.py  schedules.py  utils.py
src/conf/: config.yaml
src/conf/epsilon_sched/: constant.yaml  exponential.yaml
src/conf/lr_sched/: constant.yaml  onecycle.yaml
src/conf/model/: convolutional.yaml  fully_connected.yaml
src/conf/momentum_sched/: constant.yaml  onecycle.yaml
src/tests/: conftest.py  test_data.py  test_main.py  test_models.py  test_schedules.py  test_utils.py
